# solana-wrapper

./: .env.example  Anchor.toml  Cargo.toml  README.md  nest-cli.json  package.json  tsconfig.json
programs/snzup_subscription/: Cargo.toml
programs/snzup_subscription/src/: contexts.rs  internal.rs  lib.rs
src/: app.module.ts  main.ts
src/common/errors/: app-error.ts
src/controllers/: api.controller.ts  api.dto.ts  health.controller.ts
src/idl/: snzup_subscription.json
src/solana/: rpc-gate.ts  solana.service.ts  solana.service.ts.backup
